# air-quality-realtime

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
infra/: .gitignore  README.md  dynamodb.tf  eventbridge.tf  lambda_processor.tf  lambda_producer.tf  outputs.tf  providers.tf  sns.tf  sqs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/lambdas/processor/: handler.py
infra/lambdas/producer/: handler.py
scripts/: create_topics.sh  probe_open_meteo.py  query_duckdb.py
src/air_quality_realtime/: __init__.py
src/air_quality_realtime/common/: config.py  kafka.py  models.py
src/air_quality_realtime/dashboard/: __init__.py  app.py  queries.py
src/air_quality_realtime/processor/: detector.py  main.py
src/air_quality_realtime/producer/: main.py  publisher.py  sensors.py  sources.py
src/air_quality_realtime/sink/: duckdb_sink.py  main.py
tests/: test_detector.py  test_sensors.py  test_sink.py
